--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "yRllV4qOq7fv"
+    "id": "yRllV4qOq7fv",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "# Практическое задание 2"
@@ -12,7 +15,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "FuJKWXhejxXb"
+    "id": "FuJKWXhejxXb",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Будем работать с датасетом Pima Indian Diabetes - это набор данных из Национального института диабета, болезней органов пищеварения и почек. Целью набора данных является диагностическое прогнозирование наличия диабета у пациента. Несколько ограничений были наложены на выбор этих экземпляров из большой базы данных. В частности, все пациенты здесь - женщины в возрасте от 21 года, индийского происхождения."
@@ -21,7 +27,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "2XR6YIKGjxXf"
+    "id": "2XR6YIKGjxXf",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Описание данных:\n",
@@ -40,7 +49,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -52,7 +65,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "SE52n_IZjxXn"
+    "id": "SE52n_IZjxXn",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "**Задание 1.**\n",
@@ -64,7 +80,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "id": "nbypf5S8jxXo"
+    "id": "nbypf5S8jxXo",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -86,7 +105,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "NHPD5gpWjxXu"
+    "id": "NHPD5gpWjxXu",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "**Задание 2.**\n",
@@ -98,7 +120,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "id": "tM3xMXiXjxXv"
+    "id": "tM3xMXiXjxXv",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -119,7 +144,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "Iwjda-nSjxXy"
+    "id": "Iwjda-nSjxXy",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "**Задание 3.**\n",
@@ -131,7 +159,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "id": "jjy6ra1RjxXz"
+    "id": "jjy6ra1RjxXz",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -153,7 +184,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "lz7v-028jxYP"
+    "id": "lz7v-028jxYP",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "**Задание 4.**\n",
@@ -165,7 +199,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "id": "7AbUJ9DgjxYP"
+    "id": "7AbUJ9DgjxYP",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -196,7 +233,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
