--- a/hw_1.ipynb
+++ b/hw_1.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "I503zPFGLE_E"
+    "id": "I503zPFGLE_E",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "# Практическое задание 1 (обязательное)"
@@ -12,7 +15,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "8KZ0rg8GLYr0"
+    "id": "8KZ0rg8GLYr0",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "## Исходные данные\n",
@@ -45,7 +51,10 @@
      },
      "user_tz": -180
     },
-    "id": "cStt-oHwHQuT"
+    "id": "cStt-oHwHQuT",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -65,7 +74,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -101,7 +114,11 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Факультативное\n",
@@ -137,7 +154,11 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -158,7 +179,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -176,7 +201,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -194,7 +223,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
