--- a/dpo_hw_3.ipynb
+++ b/dpo_hw_3.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "lh4q5EJmXfiK"
+    "id": "lh4q5EJmXfiK",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Имеется следующий словарь с данными о студентах. Вам предлагается выполнить ряд заданий. "
@@ -13,7 +16,10 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "id": "BOUyTEH3Xdbf"
+    "id": "BOUyTEH3Xdbf",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -27,7 +33,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "Sh3zWuLIXwzF"
+    "id": "Sh3zWuLIXwzF",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 1. На базе данного словаря создайте датафрейм со значениями индекса `a`, `b`, `c`, `d` и `e`. "
@@ -52,7 +61,10 @@
      "user_tz": -180
     },
     "id": "0UBoh-G_Utxp",
-    "outputId": "e29190d8-ffba-4835-d373-7c5abb80c911"
+    "outputId": "e29190d8-ffba-4835-d373-7c5abb80c911",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -153,7 +165,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "AO6TPIo-ZFdy"
+    "id": "AO6TPIo-ZFdy",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 2. С использованием методов `head()`, `tail()`, `sample()` и `take()` получите:\n",
@@ -166,7 +181,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -247,7 +266,10 @@
      },
      "user_tz": -180
     },
-    "id": "A44z2sDmZE4i"
+    "id": "A44z2sDmZE4i",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -318,7 +340,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -388,7 +414,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -458,7 +488,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "d0eKkE2ZZ9_Z"
+    "id": "d0eKkE2ZZ9_Z",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 3. С использованием метода `print()` и приемами форматирования строк  выведите количество строк и столбцов датафрейма. "
@@ -478,7 +511,10 @@
      },
      "user_tz": -180
     },
-    "id": "tNb_RQLZV-bm"
+    "id": "tNb_RQLZV-bm",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -499,7 +535,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "uSWV5zk-bGLf"
+    "id": "uSWV5zk-bGLf",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 4. Получите информацию о типах данных признаков датафрейма"
@@ -519,7 +558,10 @@
      },
      "user_tz": -180
     },
-    "id": "8SOJBnWhbE-n"
+    "id": "8SOJBnWhbE-n",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -546,7 +588,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "_d1_3osBdWDg"
+    "id": "_d1_3osBdWDg",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 5. Какие и сколько уникальных значений принимает признак `gender`. Вывод оформите с помощью метода `print()`."
@@ -556,7 +601,10 @@
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {
-    "id": "ox-Cm00RdkGo"
+    "id": "ox-Cm00RdkGo",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -575,7 +623,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "AlkrnEARba0S"
+    "id": "AlkrnEARba0S",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 6. Выведите данные столбцов `student_fio` и `name`."
@@ -585,7 +636,10 @@
    "cell_type": "code",
    "execution_count": 90,
    "metadata": {
-    "id": "N7boGL_Qa3F_"
+    "id": "N7boGL_Qa3F_",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -666,7 +720,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "4WwHM4SOb3cF"
+    "id": "4WwHM4SOb3cF",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 7. Используя логические выражения, получите ответы на следующие вопросы:\n",
@@ -692,7 +749,10 @@
      },
      "user_tz": -180
     },
-    "id": "Gp3HWZoSd0A4"
+    "id": "Gp3HWZoSd0A4",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -702,7 +762,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "ak8zfrFXeT7N"
+    "id": "ak8zfrFXeT7N",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 8. С использованием свойств `.loc[]` и `.iloc[]` сформируйте датафреймы, состоящие из строк с метками индекса `b`, `c` и `d`, а также столбцами `student_fio` и `name`. Для формирования датафреймов используйте оба свойства."
@@ -722,7 +785,10 @@
      },
      "user_tz": -180
     },
-    "id": "uFgPUcsxeC2A"
+    "id": "uFgPUcsxeC2A",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -846,7 +912,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
