--- a/dpo_hw_2.ipynb
+++ b/dpo_hw_2.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "IubWvMBchjP3"
+    "id": "IubWvMBchjP3",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "**Задания предполагают использование только математических операторов**"
@@ -12,7 +15,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "K8MEy0mEiBZc"
+    "id": "K8MEy0mEiBZc",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 1. Дано трехзначное число 249. Найдите сумму его цифр. "
@@ -26,7 +32,10 @@
      "base_uri": "https://localhost:8080/"
     },
     "id": "SPz8MwfliBGG",
-    "outputId": "4d33d9f3-c60d-4a61-c4ff-d8b4a333e7b2"
+    "outputId": "4d33d9f3-c60d-4a61-c4ff-d8b4a333e7b2",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -46,7 +55,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "jz2W8zAfi-FJ"
+    "id": "jz2W8zAfi-FJ",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 2. Дано число N. С начала суток прошло N минут. Определите, сколько часов и минут будут показывать электронные часы в этот момент. Предполагается, что $N < 1440$."
@@ -56,7 +68,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "id": "OPuC6ijJhQwt"
+    "id": "OPuC6ijJhQwt",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -78,7 +93,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "ELlTWPe2lVAe"
+    "id": "ELlTWPe2lVAe",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 3. Дано вещественное число. Выведите его дробную часть."
@@ -88,7 +106,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "id": "YjVqQdHhkxhN"
+    "id": "YjVqQdHhkxhN",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -108,7 +129,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "R910AyZxm3rr"
+    "id": "R910AyZxm3rr",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 4. Дано число $N$, соответствующее росту человека в футах. Рассчитайте и выведите рост этого человека в дюймах и сантиметрах.\n",
@@ -120,7 +144,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "id": "ygdhutzNlYz2"
+    "id": "ygdhutzNlYz2",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -140,7 +167,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "fkIPB4yOoWsR"
+    "id": "fkIPB4yOoWsR",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 5. Известны координаты двух точек $A(x_1, y_1)$ и $B(x_2, y_2)$ на плоскости. Рассчитайте и выведите расстояние между ними."
@@ -150,7 +180,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "id": "GstytjGNok4O"
+    "id": "GstytjGNok4O",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -178,7 +211,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "QunH0WI-pdD6"
+    "id": "QunH0WI-pdD6",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
     "Задание 6. Вершины треугольника имеют следующие координаты $A(x1,y1)$, $B(x2,y2)$ и $С(x2,y2)$. Рассчитайте и выведите площадь этого треугольника."
@@ -188,7 +224,10 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "id": "nn8qNNDSpEeg"
+    "id": "nn8qNNDSpEeg",
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [
     {
@@ -222,7 +261,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
